--- a/plugin.yml
+++ b/plugin.yml
@@ -5,6 +5,7 @@ website: ${project.url}
 description: ${project.description}
 authors: [Cayorion]
 depend: [MassiveCore]
+api-version: 1.13
 permissions:
 # -------------------------------------------- #
 # THE REAL NODES
