--- a/pom.xml
+++ b/pom.xml
@@ -1,23 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <!-- Parent -->
-    <parent>
-        <groupId>com.massivecraft.massivesuper</groupId>
-        <artifactId>MassiveSuper</artifactId>
-        <version>2.14.1-SNAPSHOT</version>
-        <relativePath>../MassiveSuper</relativePath>
-    </parent>
-
     <!-- Basics -->
     <groupId>com.massivecraft.creativegates</groupId>
     <artifactId>CreativeGates</artifactId>
     <packaging>jar</packaging>
-
-    <!-- Info -->
-    <name>${project.artifactId}</name>
-    <description>${massiveColorInfo}${project.name} is a portal plugin. ${massiveDescriptionSuffix}</description>
-    <url>${massiveBaseUrl}/creativegates</url>
+    <version>2.14.2-SNAPSHOT</version>
 
     <!-- Dependencies -->
     <dependencies>
@@ -25,16 +13,74 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
+            <version>1.16.4-R0.1-SNAPSHOT</version>
         </dependency>
         <!-- MassiveCore -->
         <dependency>
             <groupId>com.massivecraft.massivecore</groupId>
             <artifactId>MassiveCore</artifactId>
+            <version>2.14.2-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
+    <!-- Info -->
+    <name>${project.artifactId}</name>
+    <description>${massiveColorInfo}${project.name} is a portal plugin. ${massiveDescriptionSuffix}</description>
+    <url>${massiveBaseUrl}/creativegates</url>
+    
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
+    <!-- Repositories -->
+    <repositories>
+        <!-- Spigot API -->
+        <repository>
+            <id>spigot-repo</id>
+            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
+        </repository>
+        <!-- Paper API -->
+        <repository>
+            <id>destroystokyo-repo</id>
+            <url>https://repo.destroystokyo.com/repository/maven-snapshots/</url>
+        </repository>
+        <!-- Vault-->
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+        <!-- WorldEdit and WorldGuard -->
+        <repository>
+            <id>sk89q-repo</id>
+            <url>https://maven.enginehub.org/repo/</url>
+        </repository>
+        <!-- ProtocolLib -->
+        <repository>
+            <id>dmulloy2-repo</id>
+            <url>http://repo.dmulloy2.net/nexus/repository/public/</url>
+        </repository>
+        <!-- Votifier -->
+        <repository>
+            <id>howaner-repo</id>
+            <url>http://repo.howaner.de/</url>
+        </repository>
+        <!-- Commodore/Brigadier
+        <repository>
+          <id>luck-repo</id>
+          <url>https://repo.lucko.me/</url>
+        </repository>-->
+        <!-- PlaceholderAPI -->
+        <repository>
+            <id>placeholderapi</id>
+            <url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
+        </repository>
+    </repositories>
+
     <!-- Build -->
     <build>
+        <sourceDirectory>src</sourceDirectory>
         <!-- Resources -->
         <resources>
             <!-- Standard -->
@@ -52,5 +98,5 @@
             </resource>
         </resources>
     </build>
-    
+
 </project>
